--- a/public/findChurch.html
+++ b/public/findChurch.html
@@ -15,13 +15,15 @@
 
   	<!-- Compiled and minified JavaScript -->
   	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+  	<script type="text/javascript" src="./assets/js/find.js"></script>
+
 </head>
 <body>
 	<div class="container">
 	
 		<h3>Help us locate the right church for you...</h3>
 		<hr>
-		<form role="form" id="survey">
+		<form role="form" id="survey" action="api/" method="POST" >
 			<h2>About you</h2>
 			<div class="form-group">
 				<label for="usr">Name: (Optional)</label>
@@ -49,12 +51,14 @@
 				<input type="text" class="form-control" id="Denomination">
 			</div>
 
-
-
-			
 			<button type="button" class="btn btn-success btn-block" id="submit">Submit</button>
 	
 		</form>
+
+		<div class="panel-body" id="well-section">
+				
+					<!-- Content will go in here -->
+		</div>
 
 		<!-- Modal -->
   <div class="modal fade" id="friend-modal" role="dialog">
