--- a/public/home.html
+++ b/public/home.html
@@ -50,6 +50,7 @@
                 <h5 class="white-text">Links</h5>
                 <ul>
                   <li><a class="grey-text text-lighten-3" href="findChurch">Church locator</a></li>
+                  <li><a class="grey-text text-lighten-3" href="addChurch">Add Church</a></li>                  
                   <!-- <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
                   <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
                   <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li> -->
