church finder is working

--- a/public/findChurch.html
+++ b/public/findChurch.html
@@ -23,7 +23,7 @@
 	
 		<h3>Help us locate the right church for you...</h3>
 		<hr>
-		<form role="form" id="survey" action="api/" method="POST" >
+		<form role="form" id="survey" >
 			<h2>About you</h2>
 			<div class="form-group">
 				<label for="usr">Name: (Optional)</label>
