pre-final html check

--- a/public/findChurch.html
+++ b/public/findChurch.html
@@ -17,6 +17,9 @@
   	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
 </head>
 <body>
+
+	<a class="btn btn-floating pulse"><i class="material-icons"></i></a>
+
 	<div class="container">
 	
 		<h3>Help us locate the right church for you...</h3>
@@ -73,10 +76,32 @@
         </div>
       </div>
       
+  </div>
     </div>
-  </div>
-  <div class="footer">
-  	<br>
-  	<br>
-  </div>
 	</div>
+   <br>
+   <footer class="page-footer grey">
+          <div class="container">
+            <div class="row">
+              <div class="col l6 s12">
+                <h5 class="white-text">Church Finder</h5>
+               <!--  <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p> -->
+              </div>
+              <div class="col l4 offset-l2 s12">
+                <h5 class="white-text">Links</h5>
+                <ul>
+                  <li><a class="grey-text text-lighten-3" href="home">Home</a></li>
+                  <li><a class="grey-text text-lighten-3" href="findChurch">Church locator</a></li>
+                  <li><a class="grey-text text-lighten-3" href="addChurch">Add your own church</a></li>
+                  <!-- <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li> -->
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="footer-copyright">
+            <div class="container">
+            © 2018 Paula, Bryant, and Caleb
+           <!--  <a class="grey-text text-lighten-4 right" href="#!">More Links</a> -->
+            </div>
+          </div>
+        </footer>
