--- a/public/home.html
+++ b/public/home.html
@@ -49,10 +49,10 @@
               <div class="col l4 offset-l2 s12">
                 <h5 class="white-text">Links</h5>
                 <ul>
+                  <li><a class="grey-text text-lighten-3" href="home">Home</a></li>
                   <li><a class="grey-text text-lighten-3" href="findChurch">Church locator</a></li>
-                  <!-- <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-                  <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-                  <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li> -->
+                  <li><a class="grey-text text-lighten-3" href="addChurch">Add your own church</a></li>
+                  <!-- <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li> -->
                 </ul>
               </div>
             </div>
