--- a/public/addChurch.html
+++ b/public/addChurch.html
@@ -4,6 +4,13 @@
     <script src="https://code.jquery.com/jquery.js"></script>
 	<script type="text/javascript" src="./assets/js/add.js"></script>
 	<title></title>
+	<!-- Compiled and minified CSS -->
+  	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+
+  	<!-- Compiled and minified JavaScript -->
+  	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+  	<script type="text/javascript" src="./assets/js/find.js"></script>
+
 </head>
 <body>
 	<form action="church/new" method="POST" role="form">
@@ -43,7 +50,8 @@
 	</form>
 	<button type="submit" class="btn btn-primary btn-md" id="add-btn"><span class="glyphicon glyphicon-fire"></span> Add your church </button>
 	</form>
-
+	
+	
 	<footer class="page-footer grey">
           <div class="container">
             <div class="row">
@@ -54,7 +62,7 @@
               <div class="col l4 offset-l2 s12">
                 <h5 class="white-text">Links</h5>
                 <ul>
-                  <li><a class="grey-text text-lighten-3" href="home">Home</a></li>
+                  <li><a class="grey-text text-lighten-3" href="/">Home</a></li>
                   <li><a class="grey-text text-lighten-3" href="findChurch">Church locator</a></li>
                   <li><a class="grey-text text-lighten-3" href="addChurch">Add your own church</a></li>
                   <!-- <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li> -->
