--- a/public/findChurch.html
+++ b/public/findChurch.html
@@ -94,7 +94,7 @@
               <div class="col l4 offset-l2 s12">
                 <h5 class="white-text">Links</h5>
                 <ul>
-                  <li><a class="grey-text text-lighten-3" href="home">Home</a></li>
+                  <li><a class="grey-text text-lighten-3" href="/">Home</a></li>
                   <li><a class="grey-text text-lighten-3" href="findChurch">Church locator</a></li>
                   <li><a class="grey-text text-lighten-3" href="addChurch">Add your own church</a></li>
                   <!-- <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li> -->
