--- a/public/home.html
+++ b/public/home.html
@@ -31,6 +31,7 @@
     <br>
     <br>
       <a class="waves-effect waves-light btn-large" href="findChurch.html">Find Church Here!</a>
+       <a class="waves-effect waves-light btn-large" href="addChurch.html">Add Your Church Here!</a>
       </p>
     </div>
   </div>
