setting up heroku

--- a/public/addChurch.html
+++ b/public/addChurch.html
@@ -3,7 +3,7 @@
 <head>
     <script src="https://code.jquery.com/jquery.js"></script>
 	<script type="text/javascript" src="./assets/js/add.js"></script>
-	<title></title>
+	<title>Add Church</title>
 	<!-- Compiled and minified CSS -->
   	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
 
