--- a/public/findChurch.html
+++ b/public/findChurch.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>Survey</title>
+	<title>Find A Church</title>
 
 <!-- Latest compiled and minified CSS & JS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -50,7 +50,7 @@
 			</div>
 
 			<div class="form-group">
-				<label for="usr">Denomination preferred: (Optional)</label>
+				<label for="usr">Denomination preferred: (Required)</label>
 				<input type="text" class="form-control" id="Denomination">
 			</div>
 
@@ -58,11 +58,9 @@
 	
 		</form>
 
-		<div class="panel-body" id="well-section">
-				
-					<!-- Content will go in here -->
+		<div class="panel-body center-align" id="well-section">
+      <!-- data goes here -->
 		</div>
-
 		<!-- Modal -->
   <div class="modal fade" id="friend-modal" role="dialog">
     <div class="modal-dialog">
