--- a/public/addChurch.html
+++ b/public/addChurch.html
@@ -24,27 +24,27 @@
 		<input type="text" class="form-control" id="address" placeholder="">
 	</div>
 	<div class="form-group">
-		<label for="">city</label>
+		<label for="">City</label>
 		<input type="text" class="form-control" id="city" placeholder="">
 	</div>
 	<div class="form-group">
-		<label for="">state</label>
+		<label for="">State</label>
 		<input type="text" class="form-control" id="state" placeholder="">
 	</div>
 	<div class="form-group">
-		<label for="">zip</label>
+		<label for="">Zip</label>
 		<input type="text" class="form-control" id="zip" placeholder="">
 	</div>
 	<div class="form-group">
-		<label for="">picture url</label>
+		<label for="">Website url</label>
 		<input type="text" class="form-control" id="url" placeholder="">
 	</div>
 	<div class="form-group">
-		<label for="">size</label>
+		<label for="">Size</label>
 		<input type="text" class="form-control" id="size" placeholder="">
 	</div>			
 	<div class="form-group">
-		<label for="">denomination</label>
+		<label for="">Denomination</label>
 		<input type="text" class="form-control" id="denomination" placeholder="">
 	</div>		
 	</form>
