--- a/public/findChurch.html
+++ b/public/findChurch.html
@@ -50,7 +50,7 @@
 			</div>
 
 			<div class="form-group">
-				<label for="usr">Denomination preferred: (Required)</label>
+				<label for="usr">Denomination Preferred: (Required)</label>
 				<input type="text" class="form-control" id="Denomination">
 			</div>
 
